# JaxDEM

./: .buildinfo  .gitignore  2Dgas.py  LICENSE  README.md  benchmark_colliders.py  benchmark_nl_colliders.py  genindex.html  index.html  objects.inv  plot_surface.py  py-modindex.html  pyproject.toml  requirements-docs.txt  restults.npz  search.html  searchindex.js  setup.py  sg_execution_times.html  test.py  view_surface.py
_modules/: index.html
_sources/: sg_execution_times.rst.txt
_static/: custom.css
auto_examples/: checkpoint_guide.html  clump_construction_pipeline.html  clump_guide.html  clump_jamming_dynamical_matrix_and_friction.html  collider_guide.html  custom_modules_guide.html  deformable_particle.html  deformable_particle_guide.html  domain_guide.html  dp_construction_pipeline.html  environment_custom_policy.html  facets_guide.html  force_manager_guide.html  force_model_guide.html  general_particle_construction.html  installation_guide.html  integrator_guide.html  intro_to_rl.html  introduction.html  jam_spheres.html  materials_guide.html  minimize_spheres.html  packing_fraction_protocol.html  particle_level_friction_calculation.html  performance_report.html  pseudo_log_rollout.html  sasa_calculation.html  sg_execution_times.html  sphere_construction.html  sphere_jamming_rattlers_dynamical_matrix.html  state_guide.html  system_guide.html  temperature_density_control.html  test_minimizer.html  vicsek_model.html  vtk_writer_guide.html
benchmarks/: __init__.py  base.py  collider.py  domain.py  force_manager.py  force_model.py  index.html  integrator.py  linear_integrator.py  report.html  results.json  rotation_integrator.py  run_benchmarks.py  utils.py
contribution_guide/: documentation.html  formating.html  formatting.html  index.html  naming_conventions.html
delete-this-data/: rad-0.001.npz  rad-0.01.npz  rad-0.05.npz  rad-0.1.npz  rad-0.2.npz  rad-0.5.npz  rad-1.0.npz
docs/: =0.15
examples/: 01_minimal_two_spheres.py  2Dgas.py  2Dgas_batch.py  3Dgas.py  3Dgas_batch.py  checkpoint_guide.py  clump_construction_pipeline.py  clump_guide.py  clump_jamming_dynamical_matrix_and_friction.py  collider_guide.py  custom_modules_guide.py  deformable_particle.py  deformable_particle_guide.py  domain_guide.py  dp_construction_pipeline.py  dp_ring_extrusion_neighborlist.py  environment_custom_policy.py  facets_guide.py  force_manager_guide.py  force_model_guide.py  general_particle_construction.py  grid.py  index.html  index.rst  installation_guide.py  integrator_guide.py  intro_to_rl.py  introduction.py  jam_spheres.py  materials_guide.py  minimal_dp_icosphere_neighborlist.py  minimize_spheres.py  other_example.html  packing_fraction_protocol.py  particle_level_friction_calculation.py  performance_report.py  pseudo_log_rollout.py  puffer_training.py  pyramid_test.py  quickstart.html  (+10 more)
frames/: domain_00000001.vtp  grid_00000499.vti  spheres_       0.vtp  spheres_       1.vtp  spheres_       2.vtp  spheres_       3.vtp  spheres_       4.vtp  spheres_       5.vtp  spheres_       6.vtp  spheres_       7.vtp  spheres_       8.vtp  spheres_       9.vtp  spheres_      10.vtp  spheres_00000000.vtp  spheres_00000001.vtp  spheres_00000002.vtp  spheres_00000003.vtp  spheres_00000004.vtp  spheres_00000005.vtp  spheres_00000006.vtp  spheres_00000007.vtp  spheres_00000008.vtp  (+1 more)
(+469 files in other folders)
