[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JaxDEM"
version = "0.1"
description = "Easy to use and blazing fast JAX-based library for high-performance 2D/3D Discrete Element Method (DEM) simulations."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Carlos Andres del Valle", email = "carlos.delvalleurberuaga@yale.edu"},
  {name = "Marshall McCraw", email = "marshall.mccraw@yale.edu"},
]
urls = {Repository = "https://github.com/cdelv/JaxDEM"}

dependencies = [
    "jax>=0.8.1",
    "vtk",
    "numpy",
    "orbax",
]

[project.optional-dependencies]
rl = [
    "flax>=0.12.0",
    "optax>=0.2.6",
    "distrax",
    "tqdm",
    "scipy",
    "tensorflow",
]

docs = [
    "JaxDEM[rl]",
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-gallery",
]

cuda = ["jax[cuda]>=0.8.1"]
cuda12 = ["jax[cuda12]>=0.8.1"]
cuda13 = ["jax[cuda13]>=0.8.1"]
tpu = ["jax[tpu]>=0.8.1"]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
strict = true
warn_return_any = false
ignore_missing_imports = true
python_version = "3.12"
disallow_untyped_decorators = false
exclude = "(^docs/|^tests/|/jaxdem/utils/|/jaxdem/rl/)"

[[tool.mypy.overrides]]
module = "jaxdem.utils.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.rl.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.colliders.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.minimizers.fire"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.integrators.vicsek"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.forces.router"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.forces.law_combiner"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.materials.materialTable"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.writers.checkpoints"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jaxdem.writers.vtkWriter"
ignore_errors = true
